# datagovuk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.txt  Procfile  README.md  app.json  build-config.yaml  conftest.py  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.devcontainer/: devcontainer.json
.envs/.local/: .django  .django-overrides.example  .django.example
.envs/.production/: .django.example
.github/: build-image.yaml  dependabot.yml
.github/actions/notify-slack/: action.yaml  action.yml
.github/actions/report-run-failure/: action.yml
.github/workflows/: build-image-on-tags.yaml  build-image.yaml  ci.yaml  ci.yml  codeql-analysis.yml  create-deploy-pr.yaml  create-deploy-prs.yaml  create-deployment-prs.yaml  create-integration-pr.yaml  create-pr-on-tags.yaml  create-pr.yaml  create-prod-pr-on-tags.yaml  create-production-pr.yaml  create-staging-pr-on-tags.yaml  create-staging-pr.yaml  create-staging-production-pr.yaml  create-staging-production-prs.yml  merge-to-main.yaml  notify-slack.yml  production.yaml  push-to-ecr.yaml  smoke-tests.yml  staging-production-pr.yaml  tag-staging-production.yaml  test-workflow.yml  trivy-scans.yaml
compose/local/django/: Dockerfile  start
compose/production/django/: entrypoint  start
compose/production/traefik/: traefik.yml
config/: gunicorn_conf.py  urls.py  wsgi.py
config/settings/: base.py  heroku.py  local.py  production.py  test.py
datagovuk/: conftest.py  content  jinja2.py
datagovuk/collections/: charts.py  constants.py  urls.py  views.py  visualisations.py
datagovuk/collections/tests/: test_charts.py  test_views.py  test_visualisations.py
datagovuk/content/content-pages/: about.md  accessibility.md  data-curation.md  privacy-and-terms.md  roadmap.md  support.md  team.md
datagovuk/content/data/: README.md
datagovuk/content/data-manual/: data-curation.md
datagovuk/core/: context_processors.py  feature_flags.py  jinja2.py  markdown.py  middleware.py  urls.py  utils.py  views.py
datagovuk/core/jinja2/: 400.html  500.html  base.jinja
datagovuk/core/templates/: 403.html  404.html
datagovuk/core/tests/: test_cache_middleware.py  test_context_processors.py  test_feature_flags.py  (+5 more)
datagovuk/data_manual/: constants.py  urls.py  views.py
datagovuk/directory/: constants.py  forms.py  models.py  preview_utils.py  solr.py  urls.py  utils.py  views.py
datagovuk/mock_catalogues/: urls.py  views.py
datagovuk/pages/: urls.py  views.py
datagovuk/preview/: models.py  urls.py
datagovuk/publishing/: context_processors.py  forms.py  middleware.py  mixins.py  models.py  tasks.py  urls.py  views.py
datagovuk/templates/: 403.html  404.html  500.html  base.jinja
datagovuk/users/: context_processors.py  urls.py  views.py
docker/: Dockerfile  create-pr.sh  start
docker/playwright/: Dockerfile
docker/solr/: Dockerfile  load_data.py  requirements.txt
docs/: ci_cd_pipeline.md  ci_pipeline.md  feature_flags.md  frontend.md  testing.md
frontend/: Dockerfile  main.js  package-lock.json  vite.config.js
frontend/src/: main.js
tests/: test_sample_pages.py
tests/e2e/: conftest.py  test_collection_pages.py  test_cookie_banner.py  test_cookie_page.py  test_data_manual_home_page.py  test_data_manual_pages.py  test_error_pages.py  test_feature_flags.py  test_footer_pages.py  test_google_tag_manager.py  test_header.py  test_home_page.py  test_page_content.py  test_robots.py  test_sample_pages.py  test_survey_banner.py  test_version.py  test_vite_env.py
(+147 files in other folders)
