[project]
name = "datagovuk"
version = "0.1.0"
description = "data.gov.uk website."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Brendan Smith", email = "brendan.smith@cabinet-office.digital.gov.uk" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "django==6.0.3",
  "django-compressor==4.6.0",
  "django-environ==0.13.0",
  "django-libsass==0.9",
  "gunicorn==25.3.0",
  "jinja2==3.1.6",
  "mistune==3.2.0",
  "pillow==12.1.1",
  "pytest-lazy-fixtures>=1.4.0",
  "python-frontmatter==1.1.0",
  "python-slugify==8.0.4",
  "sentry-sdk==2.56.0",
  "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
  "coverage==7.13.5",
  "django-coverage-plugin==3.2.0",
  "django-debug-toolbar==6.2.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.1",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "mypy==1.19.1",
  "playwright>=1.58.0",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-django==4.12.0",
  "pytest-playwright==0.7.2",
  "pytest-sugar==1.1.1",
  "ruff==0.15.8",
  "werkzeug[watchdog]==3.1.7",
]

[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.isort.force-single-line = true

[tool.pyproject-fmt]
keep_full_version = true

# ==== mypy ====
[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
  "mypy_django_plugin.main",
]
overrides = [
  # Django migrations should not produce any errors:
  { module = "*.migrations.*", ignore_errors = true },
]

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest]
# ==== pytest ====
ini_options.minversion = "6.0"
ini_options.addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
ini_options.python_files = [
  "tests.py",
  "test_*.py",
]

[tool.coverage]
# ==== Coverage ====
run.include = [ "datagovuk/**" ]
run.omit = [ "*/conftest.py", "*/migrations/*", "*/tests/*" ]
run.plugins = [ "django_coverage_plugin" ]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = false
format_js = false
preserve_blank_lines = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
# TODO: Remove J004, J018 when links fully moved over to this repo
ignore = "H006,H030,H031,T002,J004,J018"
include = "H017,H035"
indent = 2
profile = "jinja"
css.indent_size = 2
js.indent_size = 2
max_line_length = 120
max_attribute_length = 120
